# stackb_rules_proto

./: MODULE.bazel  go.mod
